fix(docker): update documentation URLs and dependencies
- Fix broken Docker documentation URLs in 02-images:
  - Dockerfile reference → /reference/dockerfile/
  - Best practices → /build/building/best-practices/
  - .dockerignore → /build/building/context/#dockerignore-files
- Fix networking URLs in 04-networking to new /engine/network/ path
- Fix volumes URLs in 03-volumes to new /engine/storage/ path
- Update dependencies in 05-compose:
  - psycopg2-binary 2.9.9 → 2.9.11
  - gunicorn 21.2.0 → 23.0.0
- Replace deprecated FLASK_ENV with APP_ENV (Flask 2.3+)
- Fix health check commands (use wget for alpine, Python for slim)
- Fix misleading "multi-stage build" comment in Dockerfile
- Add Compose Watch section (v2.22+ feature)
- Update Docker version references to 29.x
- Update image tags: MySQL 8.0→8.4, Node 20→22, Prometheus/Grafana

--- a/devops/docker/05-compose/code/.env.example
+++ b/devops/docker/05-compose/code/.env.example
@@ -12,8 +12,9 @@
 # Web server port (default: 8080)
 WEB_PORT=8080
 
-# Flask environment: development, production
-FLASK_ENV=development
+# Application environment: development, production
+# Note: FLASK_ENV is deprecated in Flask 2.3+, use APP_ENV instead
+APP_ENV=development
 
 # Enable debug mode (true/false)
 DEBUG=false
