--- a/devops/docker/05-compose/code/docker-compose.yml
+++ b/devops/docker/05-compose/code/docker-compose.yml
@@ -22,7 +22,8 @@ services:
       api:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost/health || exit 1"]
+      # Note: Using wget since nginx:alpine doesn't include curl
+      test: ["CMD-SHELL", "wget -q --spider http://localhost/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -38,7 +39,7 @@ services:
       context: ./api
       dockerfile: Dockerfile
     environment:
-      - FLASK_ENV=${FLASK_ENV:-production}
+      - APP_ENV=${APP_ENV:-production}
       - DEBUG=${DEBUG:-false}
       - DB_HOST=db
       - DB_PORT=5432
@@ -49,7 +50,8 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
+      # Note: Using Python since python:slim doesn't include curl
+      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:5000/health')\" || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
