--- a/automation/terraform/11-cicd/terraform-cicd-demo/.github/workflows/terraform-apply.yml
+++ b/automation/terraform/11-cicd/terraform-cicd-demo/.github/workflows/terraform-apply.yml
@@ -13,6 +13,7 @@
 name: Terraform Apply
 
 on:
+  workflow_dispatch:  # Manual trigger via "Run workflow" button
   push:
     branches:
       - main
@@ -47,7 +48,7 @@ jobs:
       # Step 2: Configure AWS credentials (OIDC)
       # -----------------------------------------------------------------------
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v5
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
